<resources>
    <string name="app_name">毕昇网</string>
    <string name="typographer_titils">印刷商</string>
    <string name="typographer_paixu">综合排序</string>
    <string name="typographer_suaixuan">筛选</string>
    <string name="me_titls">我的</string>
    <string name="logo_titles">印刷高手</string>
    <string name="logo_titles2">在身边</string>
    <string name="main_me">活跃值</string>
    <string name="main_me_erweima">我的二维码</string>
    <string name="main_me_wodefabu">我的发布</string>
    <string name="main_me_frindes">我的好友</string>
    <string name="main_me_xiangce">相册</string>
    <string name="main_me_renzhengziliao">认证资料</string>
    <string name="main_me_mianfeituig">免费推广</string>
    <string name="main_me_tansuo">探索</string>
    <string name="main_me_shezhi">设置</string>
    <string name="main_me_wodesixin">我的私信</string>
    <string name="main_me_wodeliuyan">我的留言</string>
    <string name="main_me_woshicaigou">我是采购</string>
    <string name="main_me_renzhengchengweiyinshuashang">认证成为印刷商</string>
    <string name="main_me_renzhengchengweiyinshuaren">认证成为印刷人</string>
    <string name="mypublish_titles">我的发布</string>
    <string name="detailes_liuyan">留言</string>
    <string name="detailes_liulan">浏览</string>
    <string name="detailes_sixin">私信</string>
    <string name="bishengwang">毕昇网</string>
    <string name="detailes_tuijian">推荐</string>
    <string name="detailes_titles">详情</string>
    <string name="explore_wode">我的</string>
    <string name="explore_tansuo">探索</string>
    <string name="explore_xiaomishu">小秘书</string>
    <string name="explore_leidachazhaoren">雷达查找人</string>
    <string name="explore_shejishizhuanqu">设计师专区</string>
    <string name="publishdesignrequiremwet_titles">发布设计需求</string>
    <string name="publispurchaseinfo_titles">发布采购信息</string>
    <string name="publishdesignrequiremwet_biaoti">请输入标题,高价悬赏包装设计</string>
    <string name="publishdesignrequiremwet_shejixuqiu">请输入设计需求</string>
    <string name="publishdesignrequiremwet_xusahngjinre">悬赏金额</string>
    <string name="publishdesignrequiremwet_shulaing">数量</string>
    <string name="publishdesignrequiremwet_zhouqi">周期</string>
    <string name="publishdesignrequiremwet_gongzuori">工作日</string>
    <string name="publishdesignrequiremwet_tupian">添加3张图片或视频,就与机会被置顶。</string>
    <string name="publishdesignrequiremwet_yuyin">添加一段真实语音,信用度提高80%</string>
    <string name="publishdesignrequiremwet_fasong">发送</string>
    <string name="publishpurchase_titles">发布采购信息</string>
    <string name="publishpurchase_moban">使用模板</string>
    <string name="publishpurchase_fabushejixuqiu">发布设计需求</string>
    <string name="publishpurchase_biaoti">请输入标题,如我要印刷一批画册</string>
    <string name="publishpurchase_neirong">请输入文字内容,如规格材质,周期,工艺要求等</string>
    <string name="publishpurchase_kanguofabu">谁能看到我的发布</string>
    <string name="publishpurchase_lianxitishi">联系你的人会是你更想要找的人</string>
    <string name="publishpurchase_dingxiangshezhi">定向设置</string>
    <string name="zhaogaotianxia_fubu">发布</string>
    <string name="zhaogaotianxia_fubucagouxinxi">采购信息</string>
    <string name="zhaogaotianxia_gonfyingxinxi">供应信息</string>
    <string name="zhaogaotianxia_ershouxinxi">二手信息</string>
    <string name="zhaogaotianxia_qiuzhixinxi">招聘信息</string>
    <string name="homepage_dongguan">东莞</string>
    <string name="homepage_shuaidan">甩单</string>
    <string name="homepage_qiudan">求单</string>
    <string name="homepage_paixu">综合排序</string>
    <string name="homepage_zuixin">最新</string>
    <string name="homepage_shuaixuan">筛选</string>
    <string name="homepage_quanbu">全部</string>
    <string name="title_activity_float">FloatActivity</string>
    <string name="printingpeaple_nv">女</string>
    <string name="printingpeaple_nan">男</string>
    <string name="printingpeaple_all">全部</string>
    <string name="printingpeple_detail_titles">毕升小女子</string>
    <string name="printingpeple_detail_titles2">毕升美男子</string>
    <string name="printingpeple_detail_huoyuezhi">活跃值</string>
    <string name="printingpeple_detail_bioaqian">Ta的标签</string>
    <string name="printingpeple_detail_yinshua">印刷</string>
    <string name="printingpeple_detail_huacecaiye">画册彩页</string>
    <string name="printingpeple_detail_mingpian">名片</string>
    <string name="printingpeple_detail_fabu">Ta的发布</string>
    <string name="printingpeple_detail_renzheng">Ta的认证</string>
    <string name="printingpeple_detail_xiangce">个人相册</string>
    <string name="printingpeple_detail_jiahaoyou">关注</string>
    <string name="title_activity_activity__mypublish">Activity_Mypublish</string>
    <string name="yaoqingpengyou">邀请朋友</string>
    <string name="share">分享</string>
    <string name="zonghepaixu">综合排序</string>
    <string name="julicongjindaoyuan">距离从近到远</string>
    <string name="huoyuezhi">活跃值从高到低</string>
    <string name="guanzhushu">关注数从高到低</string>
    <string name="zhenshitouxaing">企业logo</string>
    <string name="zuixin">最新</string>
    <string name="tiannei">3天内</string>
    <string name="yizhounei">一周内</string>
    <string name="yigeyuenei">一个月内</string>
    <string name="certificatedinfomation_wode">我的</string>
    <string name="certificatedinfomation_title">认证资料</string>
    <string name="certificatedinfomation_yinshuaren">认证成为印刷人,即可发布求单、招聘、二手机械信息</string>
    <string name="certificatedinfomation_tianjiatupian">添加名片或相关图片</string>
    <string name="certificatedinfomation_zhengmian">（正面和背面）</string>
    <string name="certificatedinfomation_zhiwei">职位</string>
    <string name="certificatedinfomation_gongsi">公司全称</string>
    <string name="certificatedinfomation_gongsidizhi">公司地址</string>
    <string name="certificatedinfomation_hangyebiaoqian">行业标签</string>
    <string name="certificatedinfomation_chongzhi">重置</string>
    <string name="certificatedinfomation_tijiaoshenhe">提交审核</string>
    <string name="certificatedinfomation_yinshuashang">认证成为印刷商,即可免费展示企业在印刷商频道</string>
    <string name="certificatedinfomation_yingyezhizhao">上传有效的营业执照</string>
    <string name="certificatedinfomation_tupiaheshipin">上传3张企业图片或企业宣传视频</string>
    <string name="certificatedinfomation_gongsijianjie">公司简介</string>
    <string name="certificatedinfomation_tinajhaoma">添加公司电话号码</string>
    <string name="certificatedinfomation_quhao">区号</string>
    <string name="certificatedinfomation_renzhengyinshuaren">认证印刷人</string>
    <string name="certificatedinfomation_renzhengyinshuashang">认证印刷商</string>
    <string name="title_activity_activity_certificatedinfomation">Activity_certificatedinfomation
    </string>
    <string name="title_activity_activity_explore">Activity_explore</string>
    <string name="title_activity_activity_detailes">Activity_detailes</string>
    <string name="title_activity_activity_stylistprefecture">Activity_stylistprefecture</string>
    <string name="stylistprefecture_titles">设计师专区</string>
    <string name="stylistprefecture_tansuo">探索</string>
    <string name="stylistprefecture_dongguan">东莞</string>
    <string name="stylistprefecture_anbigepaiming">按逼格排名</string>
    <string name="stylistprefecture_gerenzuopin">个人作品</string>
    <string name="title_activity_activity_publishpurchaseinfo">Activity_publishpurchaseinfo</string>
    <string name="paizhaoshangchuantupian">拍照上传图片</string>
    <string name="congxaingcesahngchuantupian">从相册上传图片</string>
    <string name="quxiao">取消</string>
    <string name="title_activity_activity__login">Activity_Login</string>
    <string name="jiahaoyou">扫描以下二维码,添加我为好友</string>
    <string name="title_activity_activity__baidu_serch">Activity_BaiduSerch</string>
    <string name="title_activity_activity__my_tip">Activity_MyTip</string>
    <string name="mytip_tanshuo">探索</string>
    <string name="mytip_titles">小秘书</string>
    <string name="mytip_tuijianxiaomishu">推荐小秘书</string>
    <string name="mytip_wodezidingyi">我的自定义</string>
    <string name="mytip_wodeshiyongjilu">我的使用记录</string>
    <string name="mytip_shanchu">删除</string>
    <string name="title_activity_activity_main_mytip">Activity_main_mytip</string>
    <string name="main_mytip_tuijian">推荐</string>
    <string name="main_mytip_zidingyixiaomishu">自定义小秘书</string>
    <string name="title_activity_activity__selft_mytip">Activity_SelftMytip</string>
    <string name="selft_mytip_tianjia">添加四张不同角度透明背景png格式图片</string>
    <string name="selft_mytip_queren">确认生成小秘书</string>
    <string name="selft_mytip_gesgibudui">格式不对,请添加透明背景png格式图片</string>
    <string name="title_activity_activity_selftmytip_detailes">Activity_selftmytip_detailes</string>
    <string name="selft_mytip_detaile_btn">开始使用</string>
    <string name="publishi_inviteinfo_zhaopinzhiwei">请输入招聘职位</string>
    <string name="publishi_inviteinfo_gangweizhize">岗位职责:</string>
    <string name="publishi_inviteinfo_renzzhige">任职资格:</string>
    <string name="publishi_inviteinfo_titles">发布招聘信息</string>
    <string name="publishi_usedinfo_titles">发布二手机械信息</string>
    <string name="publishi_usedinfo_biaoti">请输入二手机械标题</string>
    <string name="publishi_usedinfo_xinjiucengdu">新旧程度</string>
    <string name="publishi_usedinfo_jiagefanwei">价格范围</string>
    <string name="publishi_usedinfo_chuchangriqi">出厂日期</string>
    <string name="publishi_usedinfo_pinpaiming">品牌名</string>
    <string name="publishi_usedinfo_chanpinsuozaidi">产品所在地</string>
    <string name="publishi_usedinfo_shouhuofuwu">售后服务</string>
    <string name="publishi_usedinfo_yes">是</string>
    <string name="publishi_usedinfo_no">否</string>
    <string name="publishi_usedinfo_year">年</string>
    <string name="publishi_usedinfo_yue">月</string>
    <string name="publishi_usedinfo_day">日</string>
    <string name="fragment_dialog_gongying_content">怪我咯!普通用户不开放发布供应信息哦,认证成为印刷人,即可发布啦。</string>
    <string name="fragment_dialog_gongying_renzheng">去认证</string>
    <string name="fragment_dialog_ershou_content">怪我咯!普通用户不开放发布二手机械信息哦,认证成为印刷人,即可发布啦。</string>
    <string name="mypublishi_item_dingxiangxiugai">定向修改</string>
    <string name="mypublishi_item_shanchu">删除</string>
    <string name="fragment_dialog_zhaopin_content">怪我咯!普通用户不开放发布招聘信息哦,认证成为印刷人,即可发布啦。</string>
    <string name="register_emptyphone">亲！,手机号不能为空</string>
    <string name="register_emptycode">亲！,验证码不能为空</string>
    <string name="register_emptypssword">亲！,密码不能为空</string>
    <string name="register_emptypssword_less">亲！,请输入不少于6为数的密码</string>
    <string name="register_errorPhoneNum">亲！,手机号码格式不正确,请重新输入</string>
    <string name="uploader_Name">亲！,请输入昵称或真实名字</string>
    <string name="uploader_birthday">亲！,请输入出生日期</string>
    <string name="mymessage_titles">我的留言</string>
    <string name="myphoto_titles">我的相册</string>
    <string name="myprovateLetter_titles">我的私信</string>
    <string name="title_activity_activity__private_letter">Activity_PrivateLetter</string>
    <string name="weixinhaoyou">微信好友</string>
    <string name="weixinpenhyouquan">微信朋友圈</string>
    <string name="qqhaoyou">QQ好友</string>
    <string name="pulishipurchase_empty_biaoty">亲！请输入标题</string>
    <string name="pulishipurchase_empty_conten">亲！请输入文字内容</string>
    <string name="pulishipurchase_empty_monney">亲！请输入悬赏金额</string>
    <string name="pulishipurchase_empty_count">亲！请输入数量</string>
    <string name="pulishipurchase_empty_finishitime">亲！请输入完成周期</string>
    <string name="publishiinvite_empty_gangwei">亲！请输入岗位职责</string>
    <string name="publishiinvite_empty_zhiwei">亲！请输入职位</string>
    <string name="publishiinvite_empty_renzhizhige">亲！请输入任职资格</string>
    <string name="publishiused_empty_jiage">亲！请输入价格范围</string>
    <string name="publishiused_empty_chuchangriqi">亲！请输入出厂日期</string>
    <string name="publishiused_empty_pinpai">亲！请输入品牌名</string>
    <string name="publishiused_empty_address">亲！请输入产品所在地</string>
    <string name="fasong">发送</string>
    <string name="wancheng">完成</string>
    <string name="nan">男</string>
    <string name="nv">女</string>
    <string name="date">出生日期</string>
    <string name="mingzi">输入昵称或真实名字</string>
    <string name="shuachuan">上传头像</string>
    <string name="touxiang">真实头像更有机会被置顶</string>
</resources>