<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
  >
    <TextView
        android:id="@+id/typographer_pp_paixu"
        android:layout_width="match_parent"
        android:layout_height="78px"
        android:text="@string/zonghepaixu"
        android:textColor="@color/mypublish_textcolor"
        android:gravity="center_vertical"
        android:paddingLeft="48px"
        android:textSize="@dimen/textsize18"
        android:background="@color/zonghepaixu_textbg"

        />

    <TextView
        android:id="@+id/typographer_pp_yunajin"
        android:layout_width="match_parent"
        android:layout_height="78px"
        android:text="@string/julicongjindaoyuan"
        android:textColor="@color/mypublish_textcolor"
        android:paddingLeft="48px"
        android:textSize="@dimen/textsize18"
        android:gravity="center_vertical"
        android:background="@color/zonghepaixu_textbgtwo"
        />
    <TextView
        android:id="@+id/typographer_pp_gaodi"
        android:layout_width="match_parent"
        android:layout_height="78px"
        android:text="@string/huoyuezhi"
        android:textColor="@color/mypublish_textcolor"
        android:paddingLeft="48px"
        android:gravity="center_vertical"
        android:textSize="@dimen/textsize18"
        android:background="@color/zonghepaixu_textbg"
        />
    <TextView
        android:id="@+id/typographer_pp_guanzhuggaodi"
        android:layout_width="match_parent"
        android:layout_height="78px"
        android:text="@string/guanzhushu"
        android:textColor="@color/mypublish_textcolor"
        android:gravity="center_vertical"
        android:paddingLeft="48px"
        android:textSize="@dimen/textsize18"
        android:background="@color/zonghepaixu_textbgtwo"
        />
    <TextView
        android:id="@+id/typographer_pp_qiyelougou"
        android:layout_width="match_parent"
        android:layout_height="78px"
        android:paddingLeft="48px"
        android:gravity="center_vertical"
        android:text="@string/zhenshitouxaing"
        android:textColor="@color/mypublish_textcolor"
        android:textSize="@dimen/textsize18"
        android:background="@color/zonghepaixu_textbg"
        />
</LinearLayout>