<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@mipmap/login_bg"
    android:orientation="vertical" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32px"
        android:layout_marginRight="32px"
        android:layout_marginTop="114px"
        android:orientation="horizontal" >

        <ImageView
            android:id="@+id/uploader_headImg"
            android:layout_width="116px"
            android:layout_height="116px"
            android:scaleType="fitXY"
            android:src="@mipmap/loginavatar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_marginLeft="36px"
            android:orientation="vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/shuachuan"
                android:textColor="@color/register_et"
                android:textSize="@dimen/textsize14" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="20px"
                android:text="@string/touxiang"
                android:textColor="@color/register_et"
                android:textSize="@dimen/textsize14" />
        </LinearLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32px"
        android:layout_marginRight="32px"
        android:layout_marginTop="56px"
        android:orientation="vertical" >

        <include layout="@layout/line" />

        <EditText
            android:id="@+id/uploader_Name"
            android:layout_width="match_parent"
            android:layout_height="90px"
            android:background="@null"
            android:drawableLeft="@mipmap/icon_name"
            android:gravity="center_vertical"
            android:hint="@string/mingzi"
            android:singleLine="true"
            android:textColor="@color/register_et"
            android:textColorHint="@color/register_et"
            android:textSize="@dimen/textsize18"
            android:drawablePadding="20px"/>

        <include layout="@layout/line" />
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32px"
        android:layout_marginRight="32px"
        android:orientation="vertical" >

        <EditText
            android:id="@+id/uploader_birtherday"
            android:layout_width="match_parent"
            android:layout_height="90px"
            android:background="@null"
            android:drawableLeft="@mipmap/icon_date"
            android:gravity="center_vertical"
            android:hint="@string/date"
            android:singleLine="true"
            android:textColor="@color/register_et"
            android:textColorHint="@color/register_et"
            android:textSize="@dimen/textsize18"
            android:drawablePadding="20px"
            android:editable="false"/>

        <include layout="@layout/line" />
    </LinearLayout>

    <RadioGroup
        android:id="@+id/uploader_rg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="32px"
        android:layout_marginRight="32px"
        android:layout_marginTop="40px"
        android:orientation="horizontal" >

        <RadioButton
            android:id="@+id/uploader_mail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="64px"
            android:text="@string/nan"
            android:textColor="@color/register_et" />

        <RadioButton
            android:id="@+id/uploader_femail"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="64px"
            android:text="@string/nv"
            android:textColor="@color/register_et" />
    </RadioGroup>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="32px"
        android:layout_marginRight="32px"
        android:layout_marginTop="140px"
        android:orientation="horizontal" >

        <ImageView
            android:layout_width="100px"
            android:layout_height="100px"
            android:src="@mipmap/icon"
            android:background="#2B2B2B"
            android:paddingLeft="10px"
            android:paddingRight="10px"/>

        <Button
            android:id="@+id/uploader_img_finish"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginLeft="14px"
             android:background="@drawable/login_bg_selector"
            android:gravity="center"
            android:text="@string/wancheng"
            android:textColor="@color/textcoloryellow" 
            android:textSize="@dimen/textsize18"/>
    </LinearLayout>

</LinearLayout>