<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="#ffff" >

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#f0f0f0" >
        </LinearLayout>
        <TextView
            android:id="@+id/coomment_from_camara"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/paizhaoshangchuantupian"
            android:textColor="@color/textcolorback"/>
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#f0f0f0" >
        </LinearLayout>
        <TextView
            android:id="@+id/comment_from_paoto"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/congxaingcesahngchuantupian"
            android:textColor="@color/textcolorback"
            />
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:background="#f0f0f0" >
        </LinearLayout>
        <TextView
            android:id="@+id/comment_from_cancle"
            android:layout_width="match_parent"
            android:layout_height="48dp"
            android:gravity="center"
            android:text="@string/quxiao"
            android:textColor="@color/textcolorback"/>
    </LinearLayout>
</LinearLayout>